fix z-index

--- a/packages/toast/index.pcss
+++ b/packages/toast/index.pcss
@@ -16,9 +16,10 @@
   box-sizing: border-box;
   transform: translate(-50%, -50%);
   background-color: rgba(0, 0, 0, .7);
-  z-index: 3000;
+  z-index: 3001;
 
   &__overlay {
+    z-index: 3000;
     position: fixed;
     top: 0;
     left: 0;
